// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductCard debe de mostrar el componente correctamente 1`] = `
<div
  className="productCard undefined"
>
  <h1>
    Match
  </h1>
</div>
`;

exports[`ProductCard debe incrementar contador 1`] = `
<div
  className="productCard undefined"
>
  <h1>
    Count
  </h1>
  <span>
    0
  </span>
  <button
    onClick={[Function]}
  />
</div>
`;
